output
g++ -I. -g -std=c++11 -Wall -Wextra -Werror -pthread -O *.cpp -lgtest -lgtest_main -o run.tests
CellTest.cpp: In member function 'virtual void Cell_Any_live_cell_with_fewer_than_two_live_neighbours_dies_as_if_caused_by_underpopulation_Test::TestBody()':
CellTest.cpp:9:3: error: 'LiveCell' was not declared in this scope
   LiveCell *liveCell = new LiveCell();
   ^
CellTest.cpp:9:13: error: 'liveCell' was not declared in this scope
   LiveCell *liveCell = new LiveCell();
             ^
CellTest.cpp:9:28: error: expected type-specifier before 'LiveCell'
   LiveCell *liveCell = new LiveCell();
                            ^
CellTest.cpp:9:28: error: expected ';' before 'LiveCell'
In file included from /usr/include/gtest/gtest.h:1807:0,
                 from CellTest.cpp:2:
CellTest.cpp:11:20: error: 'DeadCell' was not declared in this scope
   ASSERT_EQ(typeid(DeadCell), typeid(*liveCell->breedWithLiveNeighbours(0)));
                    ^
CellTest.cpp:11:3: error: template argument 1 is invalid
   ASSERT_EQ(typeid(DeadCell), typeid(*liveCell->breedWithLiveNeighbours(0)));
   ^
CellTest.cpp:12:20: error: 'DeadCell' was not declared in this scope
   ASSERT_EQ(typeid(DeadCell), typeid(*liveCell->breedWithLiveNeighbours(1)));
                    ^
CellTest.cpp:12:3: error: template argument 1 is invalid
   ASSERT_EQ(typeid(DeadCell), typeid(*liveCell->breedWithLiveNeighbours(1)));
   ^
make: *** [run.tests] Error 1
